// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="overflow-hidden relative"
        data-testid="udp-thumbnail"
      >
        <img
          alt=""
          class="absolute"
          data-testid="udp-thumbnail-image"
          src="./klosebrothers-logo.svg"
        />
        <div
          class="absolute size-full bg-primary-200 opacity-[33%]"
          data-testid="udp-thumbnail-overlay"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="overflow-hidden relative"
      data-testid="udp-thumbnail"
    >
      <img
        alt=""
        class="absolute"
        data-testid="udp-thumbnail-image"
        src="./klosebrothers-logo.svg"
      />
      <div
        class="absolute size-full bg-primary-200 opacity-[33%]"
        data-testid="udp-thumbnail-overlay"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot > matches snapshot for alt image 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="overflow-hidden relative"
        data-testid="udp-thumbnail"
      >
        <svg
          class="size-full absolute"
          data-testid="udp-thumbnail-alt"
          fill="currentColor"
          height="600"
          preserveAspectRatio="none"
          viewBox="0 0 800 600"
          width="800"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="63"
            width="722"
            x="39"
            y="38"
          />
          <rect
            height="177"
            width="348"
            x="39"
            y="127"
          />
          <rect
            height="231"
            width="722"
            x="39"
            y="330"
          />
          <rect
            height="177"
            width="348"
            x="412"
            y="127"
          />
        </svg>
        <div
          class="absolute size-full bg-primary-200 opacity-[33%]"
          data-testid="udp-thumbnail-overlay"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="overflow-hidden relative"
      data-testid="udp-thumbnail"
    >
      <svg
        class="size-full absolute"
        data-testid="udp-thumbnail-alt"
        fill="currentColor"
        height="600"
        preserveAspectRatio="none"
        viewBox="0 0 800 600"
        width="800"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="63"
          width="722"
          x="39"
          y="38"
        />
        <rect
          height="177"
          width="348"
          x="39"
          y="127"
        />
        <rect
          height="231"
          width="722"
          x="39"
          y="330"
        />
        <rect
          height="177"
          width="348"
          x="412"
          y="127"
        />
      </svg>
      <div
        class="absolute size-full bg-primary-200 opacity-[33%]"
        data-testid="udp-thumbnail-overlay"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot > matches snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="overflow-hidden animate-pulse relative"
        data-testid="udp-thumbnail"
      >
        <img
          alt=""
          class="absolute"
          data-testid="udp-thumbnail-image"
          src="./klosebrothers-logo.svg"
        />
        <div
          class="absolute size-full bg-primary-200 opacity-[33%]"
          data-testid="udp-thumbnail-overlay"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="overflow-hidden animate-pulse relative"
      data-testid="udp-thumbnail"
    >
      <img
        alt=""
        class="absolute"
        data-testid="udp-thumbnail-image"
        src="./klosebrothers-logo.svg"
      />
      <div
        class="absolute size-full bg-primary-200 opacity-[33%]"
        data-testid="udp-thumbnail-overlay"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot > matches snapshot when no image 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="overflow-hidden relative"
        data-testid="udp-thumbnail"
      >
        <div
          class="absolute size-full bg-primary-200 opacity-[33%]"
          data-testid="udp-thumbnail-overlay"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="overflow-hidden relative"
      data-testid="udp-thumbnail"
    >
      <div
        class="absolute size-full bg-primary-200 opacity-[33%]"
        data-testid="udp-thumbnail-overlay"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot > matches snapshot with additional classes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="overflow-hidden pt-8 relative"
        data-testid="udp-thumbnail"
      >
        <img
          alt=""
          class="absolute"
          data-testid="udp-thumbnail-image"
          src="./klosebrothers-logo.svg"
        />
        <div
          class="absolute size-full bg-primary-200 opacity-[33%]"
          data-testid="udp-thumbnail-overlay"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="overflow-hidden pt-8 relative"
      data-testid="udp-thumbnail"
    >
      <img
        alt=""
        class="absolute"
        data-testid="udp-thumbnail-image"
        src="./klosebrothers-logo.svg"
      />
      <div
        class="absolute size-full bg-primary-200 opacity-[33%]"
        data-testid="udp-thumbnail-overlay"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot > matches snapshot with additional classes for alt image 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="overflow-hidden relative"
        data-testid="udp-thumbnail"
      >
        <svg
          class="size-full p-8 absolute"
          data-testid="udp-thumbnail-alt"
          fill="currentColor"
          height="600"
          preserveAspectRatio="none"
          viewBox="0 0 800 600"
          width="800"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="63"
            width="722"
            x="39"
            y="38"
          />
          <rect
            height="177"
            width="348"
            x="39"
            y="127"
          />
          <rect
            height="231"
            width="722"
            x="39"
            y="330"
          />
          <rect
            height="177"
            width="348"
            x="412"
            y="127"
          />
        </svg>
        <div
          class="absolute size-full bg-primary-200 opacity-[33%]"
          data-testid="udp-thumbnail-overlay"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="overflow-hidden relative"
      data-testid="udp-thumbnail"
    >
      <svg
        class="size-full p-8 absolute"
        data-testid="udp-thumbnail-alt"
        fill="currentColor"
        height="600"
        preserveAspectRatio="none"
        viewBox="0 0 800 600"
        width="800"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="63"
          width="722"
          x="39"
          y="38"
        />
        <rect
          height="177"
          width="348"
          x="39"
          y="127"
        />
        <rect
          height="231"
          width="722"
          x="39"
          y="330"
        />
        <rect
          height="177"
          width="348"
          x="412"
          y="127"
        />
      </svg>
      <div
        class="absolute size-full bg-primary-200 opacity-[33%]"
        data-testid="udp-thumbnail-overlay"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot > matches snapshot with additional classes for thumbnail image 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="overflow-hidden relative"
        data-testid="udp-thumbnail"
      >
        <img
          alt=""
          class="p-8 absolute"
          data-testid="udp-thumbnail-image"
          src="./klosebrothers-logo.svg"
        />
        <div
          class="absolute size-full bg-primary-200 opacity-[33%]"
          data-testid="udp-thumbnail-overlay"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="overflow-hidden relative"
      data-testid="udp-thumbnail"
    >
      <img
        alt=""
        class="p-8 absolute"
        data-testid="udp-thumbnail-image"
        src="./klosebrothers-logo.svg"
      />
      <div
        class="absolute size-full bg-primary-200 opacity-[33%]"
        data-testid="udp-thumbnail-overlay"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
